--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Styling</title>
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1 style="text-align:center;">Style</h1>
-    <nav class="navbar navbar-expand-lg bg-danger">
-        <div class="container-field">
-            <a href="#" class="navbar-brand">Navbar</a>
+    <div class="main">
+        <div>
+            <h1>hello bootstrap</h1>
+            <a href="/boostraplearn.html">bootstrap</a>
         </div>
-    </nav>
+    </div>
 </body>
 
 </html>
