--- a/boostraplearn.html
+++ b/boostraplearn.html
@@ -11,20 +11,22 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row row-cols-3">
-            <div class="col1 bg-primary block col">
+    <div class="wrapper bg-dark">
+        <div class="row myrow">
+            <div class="col-sm-10 col-md-6 col-lg-4 bg-primary">
                 1st Column
             </div>
-            <div class="col2 bg-danger">
+            <div class="col-sm-2 col-md-6 col-lg-4 bg-danger">
                 2nd Column
             </div>
-            <div class="col3 bg-warning">
+            <div class="col-sm-6 col-md-6 col-lg-4 bg-warning">
                 3rd Column
             </div>
         </div>
-
     </div>
+    <!-- <div class="container-fluid">
+
+    </div> -->
     </div>
     <!-- <div class="wrapper bg-dark">
         <div class="row myrow">
